// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PromptGrantPermissionsStep renders with device 1`] = `
<AndroidSetupStepLayout
  headerText="Grant permissions on your device"
  leftFooterButtonProps={
    Object {
      "onClick": [Function],
      "text": "Cancel",
    }
  }
  moreInfoLink={
    <LinkComponent
      href="https://aka.ms/accessibility-insights-for-android/grantPermissions"
    >
      How do I grant permissions?
    </LinkComponent>
  }
  rightFooterButtonProps={
    Object {
      "disabled": true,
      "onClick": null,
      "text": "Next",
    }
  }
>
  <React.Fragment>
    Be sure the Accessibility Insights for Android Service on your device is turned on and has permission to access your device and capture screenshots.
  </React.Fragment>
  <DeviceDescription
    className="deviceDescription"
    description="Super-Duper Gadget"
    isEmulator={false}
  />
  <CustomizedPrimaryButton
    onClick={[Function]}
    text="Try again"
  />
</AndroidSetupStepLayout>
`;

exports[`PromptGrantPermissionsStep renders with emulator 1`] = `
<AndroidSetupStepLayout
  headerText="Grant permissions on your device"
  leftFooterButtonProps={
    Object {
      "onClick": [Function],
      "text": "Cancel",
    }
  }
  moreInfoLink={
    <LinkComponent
      href="https://aka.ms/accessibility-insights-for-android/grantPermissions"
    >
      How do I grant permissions?
    </LinkComponent>
  }
  rightFooterButtonProps={
    Object {
      "disabled": true,
      "onClick": null,
      "text": "Next",
    }
  }
>
  <React.Fragment>
    Be sure the Accessibility Insights for Android Service on your device is turned on and has permission to access your device and capture screenshots.
  </React.Fragment>
  <DeviceDescription
    className="deviceDescription"
    description="Emulator Extraordinaire"
    isEmulator={true}
  />
  <CustomizedPrimaryButton
    onClick={[Function]}
    text="Try again"
  />
</AndroidSetupStepLayout>
`;
